<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".CongratulationScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="655dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgGameLogo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:srcCompat="@drawable/hd_2_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/congratulationTitleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fs_sinclair_regular"
            android:gravity="center"
            android:text="@string/mainTitle"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvParagraph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fs_sinclair_regular"
            android:gravity="center"
            android:text="@string/tvCongratulations" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fs_sinclair_regular"
                android:text="@string/btnCompleteBack"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCompleteRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fs_sinclair_regular"
                android:text="@string/restartButton"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDisplayCompleteAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fs_sinclair_regular"
            android:gravity="center"
            android:text="@string/tvDisplayOverall"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBottomText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/fs_sinclair_regular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tvCourseName" />

        <TextView
            android:id="@+id/tvBottomText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/fs_sinclair_regular"
            android:text="@string/tvProjectMembers" />
    </LinearLayout>
</LinearLayout>